<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7eabab">

    <Button
        android:text="@string/save_file1"
        android:id="@+id/saveFile1"
        android:layout_width="550sp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:background="@drawable/button"
        app:layout_constraintLeft_toRightOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/guideline8" />

    <Button
        android:text="@string/save_file2"
        android:id="@+id/saveFile2"
        android:layout_width="550sp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:background="@drawable/button"
        app:layout_constraintLeft_toRightOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/guideline9" />

    <Button
        android:text="@string/save_file3"
        android:id="@+id/saveFile3"
        android:layout_width="550sp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:background="@drawable/button"
        app:layout_constraintLeft_toRightOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/guideline10" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAllCaps="false"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/guideline14"
        app:layout_constraintRight_toLeftOf="@id/guideline13" />

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Game"
        android:textAllCaps="false"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/guideline14"
        app:layout_constraintLeft_toLeftOf="@id/guideline11"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

</android.support.constraint.ConstraintLayout>