<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_over_plot_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ancientarchbridge">

    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60sp"
        android:layout_marginLeft="50sp"
        android:background="#77ededed"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/game_over"
        android:textColor="#93b60101"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/guideline19"
        app:layout_constraintLeft_toRightOf="@id/guideline23" />

    <TextView
        android:id="@+id/game_over_plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60sp"
        android:background="#77ededed"
        android:textColor="#e0000000"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@id/guideline25"
        app:layout_constraintLeft_toRightOf="@id/guideline23"
        app:layout_constraintRight_toLeftOf="@id/guideline24"/>


    <Button
        android:id="@+id/load_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:background="@drawable/button"
        android:text="@string/load"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/guideline20"
        app:layout_constraintTop_toBottomOf="@id/guideline19" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:background="@drawable/button"
        android:text="@string/new_game_over"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/guideline21"
        app:layout_constraintTop_toBottomOf="@id/guideline19" />

    <Button
        android:id="@+id/start_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:background="@drawable/button"
        android:text="@string/start_screen"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/guideline22"
        app:layout_constraintTop_toBottomOf="@id/guideline19" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

</android.support.constraint.ConstraintLayout>